# Ampease

./: .gitignore  README.md  app.json  config.ini.example  main.py  render.yaml  requirements.txt
src/: pyproject.toml
src/cloudformation/: startup.sh
src/webapp/: config.ini.example  main.py
src/webapp/static/js/: sq-payment-flow.js
src/webapp/static/stylesheets/: style.css
src/webapp/templates/: graphics.html  setup.html
static/: manifest.json
static/stylesheets/: sq-payment.css
